# LLM-Based-Book-Recommender

./: .gitignore  README.md  cli.py  dashboard.py  exploration.ipynb  pipeline.py  pyproject.toml  sentiment_analysis.ipynb  vector_search.ipynb
.github/workflows/: run_pipeline.yaml
Dataset/7k books/: tagged_description.txt
github/workflows/: run_pipeline.yaml
notebooks/: text_classifier.ipynb  vector_search.ipynb
src/: category_mapper.py  classifier.py  config.py  preprocessing.py  retriever.py  vectorstore.py
src/sentiment/: analyzer.py  config.py  sentiment_pipeline.py  utils.py
