[project]
name = "llm-novel-recommendation-system"
version = "0.1.0"
description = ""
authors = [
    {name = "RishabhSpark",email = "rishabh1000khandelwal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kagglehub (>=0.3.11,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-core (>=0.3.54,<0.4.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "gradio (>=5.25.2,<6.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
book-pipeline = "pipeline:run_pipeline"
